  (such as bugs 28030, 12406, 28349)
* (bug 29712) Removed broken defaultUserOptionOverrides in MessagesXx files and
  unneeded CSS flipping of quickbar. Instead, introduce option 5 which sets
  left/right according to the directionality of your interface language.
* (bug 19514) Unordered list list-style-image should be IE6-compatible (8-bit)

=== API changes in 1.19 ===
* BREAKING CHANGE: action=watch now requires POST and token.
* (bug 27790) Add query type for querymodules to output of ApiParamInfo
* (bug 28963) Add langbacklinks query module to the api
* (bug 27593) API should return error message when sha1/sha1base36 is invalid
* (bug 28578) API's parse module should not silently override invalid
  title inputs
* (bug 20699) Watchlist API should list log-events
* (bug 29070) Require a token in API action=watch
* (bug 29221) Expose oldrevid in ApiQueryWatchlist output
* (bug 29267) Always give the servername for meta=siteinfo&siprop=dbrepllag
* (bug 28897) rvparse now respects rvsection for action=query&prop=revisions
* (bug 25734) API: Possible issue with revids validation
* (bug 28002) Internal error in ApiFormatRaw::getMimeType
* (bug 29237) ApiQuery now has an option to output the "iwurl" attribute.
* (bug 28392) Mark action=undelete&timestamps as type "timestamp"
* (bug 21346) Make deleted images searchable by hash (disabled in Miser Mode)
* (bug 27595) sha1 search of list=filearchive does not work
* (bug 26763) Make RSS/Atom of user contributions more visible
* (bug 25133) Allow redirects also for action=parse&pageid
* (bug 29745) Fatal error in API search
* (bug 29476) API returns page title instead of sectiontitle for
  srprop=sectiontitle
* Correct the documentation of srprop properties

=== Languages updated in 1.19 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* Bhojpuri (bho) (renamed from "bh").